2022-08-23 SirriCelles <sirricelles@gmail.com>

AX: HTML menu element should map to role=list
    https://bugs.webkit.org/show_bug.cgi?id=201581

    This patch modifies Source/WebCore/accessibility/AccessibilityNodeObject.cpp file.
    https://github.com/WebKit/WebKit/blob/main/Source/WebCore/accessibility/AccessibilityNodeObject.cpp#L422.
    It adds check that returns AccessibilityRole::Toolbar for menu element with attribute="toolbar" and AccessibilityRole::rolelist
    for the menu element.

    Test: LayoutTests/accessibility/aria-visible-element-roles.html

    *  Source/WebCore/accessibility/AccessibilityNodeObject.cpp
    *  LayoutTests/accessibility/aria-visible-element-roles.html
    *  LayoutTests/platform/mac-wk2/accessibility/aria-visible-element-roles-expected.txt