Source/WebCore/accessibility/AccessibilityNodeObject.cpp
@@ -419,12 +419,11 @@ AccessibilityRole AccessibilityNodeObject::determineAccessibilityRoleFromNode(Tr
     }
 
     // menu tags with toolbar type should have Toolbar role.
-    if (node()->hasTagName(menuTag) && equalLettersIgnoringASCIICase(getAttribute(typeAttr), "toolbar"_s)) {
+    if (node()->hasTagName(menuTag) && equalLettersIgnoringASCIICase(getAttribute(typeAttr), "toolbar"_s)) 
         return AccessibilityRole::Toolbar;
-    } else 
+    if (node()->hasTagName(menuTag))
         return AccessibilityRole::List;
     
-        
     if (node()->hasTagName(timeTag))
         return AccessibilityRole::Time;
     if (node()->hasTagName(hrTag))
